Removed secrets and prepared backend for deployment

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,6 @@ google-auth
 google-auth-oauthlib
 google-api-python-client
 python-multipartsource venv/bin/activate
-
+python-dotenv
 requests
 python-multipart
